--- a/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
+++ b/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
@@ -65,7 +65,11 @@
   height: 8px;
   background: url(pictures/drivers_properties_arrow.png) no-repeat;
 }
-
+.properties_carPicture{
+  display: flex;
+  margin: auto 2px;
+  width: 20px;
+}
 .properties_rightButton_characteristic{
   display: flex;
   margin: auto 2px;
