--- a/src/components/drivers/DriversBody/DriversBlock/TripBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/TripBlock.css
@@ -28,9 +28,10 @@
   display: flex;
   margin: auto;
   font-family: "Roboto Bold";
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: #ff6600;
 }
+
 .tripBlock_buttonBlock{
   display: flex;
   flex-direction: column;
@@ -62,6 +63,7 @@
   border-radius: 5px;
   margin: 0 auto;
 }
+
 .tripBlock_buttonBlock_commentary{
   display: flex;
   font-size:0.59rem;
@@ -104,4 +106,13 @@
 .hidden_enter_carBrand{
     visibility: hidden;
     float: left;
+}
+@media (min-width: 1350px){
+  .tripBlock_priceBlock_price {font-size: 1.5rem}
+  .buttonBlock_button_value {font-size: 0.9rem}
+  .tripBlock_buttonBlock_commentary {font-size: 0.8rem}
+  .tripBlock_detailed {font-size: 1rem}
+  .carBrand_style {font-size: 1.3rem}
+  .fuelType_style {font-size: 1.1rem}
+  .carProps_style {font-size: 1.1rem}
 }
