--- a/src/components/drivers/DriversBody/DriversProperties/components/AutoMenu/AutoMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/AutoMenu/AutoMenu.css
@@ -6,6 +6,7 @@
     background-color: #ffffff;
     border-radius: 3px;
     box-shadow: 0 0 1px 1px rgb(236, 236, 236);
+    z-index: 4;
 }
 .autoMenu_element{
     position: relative;
@@ -24,11 +25,10 @@
 }
 .autoMenu_element_picture{
     position: absolute;
-    left:6px;
-    top:10px;
-    width: 19px;
-    height: 9px;
-    background: url(./pictures/sedan_19x9.png) no-repeat;
+    left:2%;
+    top:-2px;
+    width: 20%;
+    height: 100%;
 }
 .autoMenu_element_text{
     position:absolute;
