--- a/src/components/drivers/DriversBody/DriversProperties/components/LanguageMenu/LanguageMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/LanguageMenu/LanguageMenu.css
@@ -6,6 +6,7 @@
     background-color: #ffffff;
     border-radius: 3px;
     box-shadow: 0 0 1px 1px rgb(236, 236, 236);
+    z-index: 4;
 }
 
 .languageMenu_element{
