--- a/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
@@ -7,6 +7,7 @@
     background-color: #ffffff;
     border-radius: 3px;
     box-shadow: 0 0 1px 1px rgb(236, 236, 236);
+    z-index: 4;
 }
 .peopleMenu_element{
     position: absolute;    
