--- a/src/components/drivers/DriversRoute/DriversChangeRoute.css
+++ b/src/components/drivers/DriversRoute/DriversChangeRoute.css
@@ -1,41 +1,113 @@
+.route_show_cross{
+    display: flex;
+    width: 10%;
+    padding: 0 2%;
+    margin-left: 2%; 
+}
+.search_input_block{
+    display: flex;
+    flex-direction: row;
+    width: 85%;
+    height: 100%;
+    background: transparent;
+    border-bottom: 1px solid #ffffff;
+}
+.search_input_icon{
+    display: flex;
+    width: 10%;
+    height: 100%;
+}
+.search_input_style{
+    display: flex;
+    width: 80%;
+    height: 100%;
 
-.driversRoute_changeCityBlock{
-    display: flow-root;
-    margin: 50px 45px 0 25px;
-    background-color: red;
-    padding: 10px 0 10px 0;
-    flex-flow: row;
-}
-.changeCityBlock_elementStyle{
+    border: none;
     
-    width: 260px;
-    height: 30px;
+    color: #ffffff;
+    background: transparent;
+}
+.route_add_city{
+  display: flex;
+  flex-direction: row;
+  color:#ffffff;
+  font-family: "Roboto";
+  font-size: 12px;
+  margin-bottom: 6%;
+  height: 15%;
+}
+.route_add_city_imageBlock{
+    display: flex;
+    width: 4%;
+    height: 140%;
+    margin-right: 1%;
+}
+.route_add_city_text{
+    display: flex; 
+    margin: auto 0;
+}
+
+.route_secondBottomBlock{
+    display: flex;
+    flex-direction:row;
     
-    border: 1px solid black;
+    padding: 1% 0 ;
+    width: 50%;
 }
-.changeCityBlock_city{
+.route_secondBottomBlock_elementStyle{
     display: flex;
-    float: left;
-    padding: 0 10px 0 10px;
-    margin: 5px 5px 5px 5px; 
-    background-color: fuchsia;
+    flex-direction: row;
+    margin-top: auto;
 }
-.changeCityBlock_addCityBlock{
-    display: block;
-    flex-flow: column;
-    margin: 0 45px 0 30px;
-    background-color: aqua;
+.route_secondBottomBlock_date{
+    height: 20%;
+    margin-left: auto; 
 }
-.driversRoute_applyCityBlock{
-    display: block;
-    float:left;
+.route_secondBottomBlock_button{
+    background-color: #ff6600;
+    border-radius: 5px;
+    border-color: #ff6600;
+    width: 120%;
+    height: 50%;  
+    color: #ffffff;
 }
-.applyCityBlock_infoBlock{
+.secondBottomBlock_button_loupe{
+    display:flex;
+    width: 40%;
+    height: 100%;
+}
+.secondBottomBlock_calendarBlock{
     display: flex;
-    float: left;
-    background-color: blueviolet;
+    width: 82%;
+    height: 100%;
+    border: none;
+    border-bottom: 1px solid white;
+    background-color: transparent;
+    color: white;
+    
 }
-.applyCityBlock_applyButton{
-    display: block;
-    float: left;
+.secondBottomBlock_calendar{
+    display: flex;
+    width: 4%;
+    height: 100%;
+    margin-right: 1%;
+}
+.secondBottomBlock_dateInput{
+    display: flex;
+    width: 82%;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    color: white;
+}
+.secondBottomBlock_button_inner
+{
+    display: flex;
+    flex-direction: row;
+    margin: auto; 
+}
+.route_secondBottomBlock_searchText{
+    display: flex;
+    flex-direction: row;
+    margin: auto 0;
 }
