--- a/src/components/drivers/DriversRoute/DriversRoute.css
+++ b/src/components/drivers/DriversRoute/DriversRoute.css
@@ -56,15 +56,18 @@
 .route_show{
   display: flex;
   flex-direction: row;
-  padding: 1% 0;
-  margin-bottom: 2%;
+  flex-wrap: wrap;
+  padding-bottom: 1%;
 }
 .route_show_element{
   display: flex;
   position: relative;
   height: 100%;
-  width:20%;
+  width:25%;
+  margin-bottom: 1%;
 }
+
+
 .route_show_text{
   position: absolute;
   height:100%;
@@ -89,7 +92,9 @@
   display: flex;
   flex-direction:column;
   padding: 1% 0;
+  width: 50%;
 }
+
 .route_time_text{
   display: flex;
   font-family: "Roboto";
