--- a/src/components/drivers/Drivers.css
+++ b/src/components/drivers/Drivers.css
@@ -18,7 +18,13 @@
   
   padding:0% 17% 1% 17%;
 }
-
+.travelFormBlock{
+  position: absolute;
+  width: 66%;
+  top: 10%;
+  margin: 0 auto;
+  z-index: 10;
+}
 @media (max-width: 1400px){
   .drivers_top_background {padding: 0% 10% 1% 10%;}
   .drivers_bottom_background { padding: 0% 10% 1% 10%;}
